styles/Header.module.scss
@import './Mixin_style.scss';

.navbar {
  display: flex;
  justify-content: space-between;
  box-shadow: 0px 0px 20px -10px rgba(0, 0, 0, 0.30);
  padding: 0 10%;
  height: 4.1rem;
  width: 80%;
  position: fixed;
  .logo {
    @include title;
    display: flex;
    align-items: center;
    color: $textNoir-900;
    font-family: 'Ubuntu', sans-serif;
    font-size: 2.5rem;
    a{
      text-decoration: none;
      color: $textNoir-300;
    }
    span{
      color: $couleur1;
    }
  }
  ul {
		display: flex;
		flex-direction: row;
		justify-content: space-between;
    height: 100%;
		width: 40%;
		//background-color: aqua;
    li {
      list-style: none;
      transition: ease 0.5s;
      position: relative;
      display: flex;
      align-items: center;
      box-sizing: border-box;
			a {
        @include title;
				text-decoration: none;
        white-space: nowrap;
        &:hover {
          background-color: rgba(17, 227, 125, 0.39);
        }
      }
    }
  }
}

